# chesseckers

./: Cargo.toml  test.txt
src/: main.rs
src/board/: mod.rs  moves.rs  piece.rs  player.rs  position.rs  utils.rs
